# nbpower_demand_forecasting

./: .gitignore  README.md  pyproject.toml
notebooks/: 01 - load_and_validate_raw_date.ipynb
