[tool.poetry]
name = "nb_power_demand_predictor"
version = "0.1.0"
description = ""
authors = ["Jarome Leslie <jaromeleslie@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
requests = "^2.31.0"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
pyarrow = "^15.0.0"
logging = "^0.4.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
